# novanet

./: .gitignore  CHANGELOG.md  Dockerfile.agent  Dockerfile.build  Dockerfile.dataplane  LICENSE  Makefile  README.md  go.mod  go.sum  mkdocs.yml
.github/workflows/: ci.yml  ct.yml  nightly-security.yml  pages.yml  release.yml
api/v1/: novanet.pb.go  novanet.proto  novanet_grpc.pb.go
api/v1alpha1/: egressgatewaypolicy_types.go  hostendpointpolicy_types.go  novanetcluster_types.go  novanetworkpolicy_types.go  zz_generated.deepcopy.go
cmd/novanet-agent/: main.go  main_test.go  routing_rpcs.go
cmd/novanet-cni/: main.go  main_test.go
cmd/novanet-operator/: main.go
cmd/novanetctl/: connect.go  drops.go  ebpfservices.go  egress.go  flows.go  helpers.go  identity.go  main.go  main_test.go  metrics.go  policy.go  routing.go  services.go  status.go  tunnels.go
config/crd/: novanet.io_egressgatewaypolicies.yaml  novanet.io_hostendpointpolicies.yaml  novanet.io_ipallocations.yaml  novanet.io_ippools.yaml  novanet.io_novanetclusters.yaml  (+1 more)
dataplane/: Cargo.toml
dataplane/.cargo/: config.toml
dataplane/novanet-common/: Cargo.toml
dataplane/novanet-common/src/: lib.rs
dataplane/novanet-dataplane/: Cargo.toml  build.rs
dataplane/novanet-dataplane/src/: flows.rs  loader.rs  main.rs  maps.rs  server.rs
dataplane/novanet-ebpf/: Cargo.toml
dataplane/novanet-ebpf/src/: main.rs
docs/: api-reference.md  architecture.md  cli-reference.md  configuration.md  development.md  installation.md  novaroute-integration.md  troubleshooting.md
internal/agent/: server.go  (+3 more)
(+124 files in other folders)
